--- a/.github/workflows/Action-Test.yml
+++ b/.github/workflows/Action-Test.yml
@@ -22,10 +22,13 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Get issue file content
+        id: GetIssueFileContent
         shell: pwsh
         run: |
-          $issueFileContent = Get-Content -Path tests/IssueBody.md
-          "issueFileContent=$issueFileContent" | Out-File -FilePath $env:GITHUB_ENV -Append
+          $issueFileContent = Get-Content -Path tests/IssueBody.md -Raw
+          $issueFileContent | ForEach-Object {
+            "issueFileContent=$_" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
+          }
 
       - uses: PSModule/Debug@v0
 
