--- a/.github/workflows/Action-Test.yml
+++ b/.github/workflows/Action-Test.yml
@@ -25,11 +25,9 @@ jobs:
         id: GetIssueFileContent
         shell: pwsh
         run: |
-          $issueFileContent = Get-Content -Path tests/IssueBody.md -Raw
-          $issueFileContent
-          $issueFileContent | ForEach-Object {
-            "issueFileContent=$_" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
-          }
+          $issueFileContent = Get-Content -Path tests/IssueBody.md
+          $issueFileContent = $issueFileContent -replace '`r`n', '`n'
+          "issueFileContent=$issueFileContent" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
 
       - uses: PSModule/Debug@v0
 
