--- a/action.yml
+++ b/action.yml
@@ -26,4 +26,4 @@ runs:
         GITHUB_ACTION_INPUT_IssueBody: ${{ inputs.IssueBody }}
       run: |
         # Get-IssueFormData
-        . "$env:GITHUB_ACTION_PATH\scripts\main.ps1" -Verbose
+        . "${{ github.action_path }}\scripts\main.ps1" -Verbose
