🩹 [Refactor]: Replace PowerShell script with GitHub-Script action for issue file content retrieval

--- a/.github/workflows/Action-Test.yml
+++ b/.github/workflows/Action-Test.yml
@@ -27,23 +27,17 @@ jobs:
 
       - name: Get issue file content
         id: GetIssueFileContent
-        shell: pwsh
-        run: |
-          $issueFileContent = Get-Content -Path tests/IssueBody.md -Raw
-
-          $EOF = -join (1..15 | ForEach {[char]((48..57)+(65..90)+(97..122) | Get-Random)})
-          "issueFileContent<<$EOF" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
-          $issueFileContent | Out-File -FilePath $env:GITHUB_OUTPUT -Append
-          "$EOF" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
-
-      - uses: PSModule/Debug@v0
-        if: always()
+        uses: GitHub-Script@v1
+        with:
+          Script: |
+            $issueFileContent = Get-Content -Path tests/IssueBody.md -Raw
+            Set-GitHubOutput -Name 'issueFileContent' -Value $issueFileContent
 
       - name: Action-Test
         id: Action-Test
         uses: ./
         with:
-          IssueBody: ${{ steps.GetIssueFileContent.outputs.issueFileContent }}
+          IssueBody: ${{ fromJson(steps.GetIssueFileContent.outputs.result).issueFileContent }}
 
       - name: Action-Test-Results
         shell: pwsh
