--- a/.github/workflows/Action-Test.yml
+++ b/.github/workflows/Action-Test.yml
@@ -29,12 +29,7 @@ jobs:
         id: GetIssueFileContent
         uses: PSModule/GitHub-Script@v1
         with:
-          Script: |
-            LogGroup 'Get Issue File Content' {
-              $issueFileContent = Get-Content -Path tests/IssueBody.md -Raw
-              $issueFileContent
-              Set-GitHubOutput -Name 'issueFileContent' -Value $issueFileContent
-            }
+          Script: . '.\tests\Get-IssueFileContent.ps1'
 
       - name: Action-Test
         id: Action-Test
