🩹 [Patch]: Enable output display for Action-Test workflow

--- a/.github/workflows/Action-Test.yml
+++ b/.github/workflows/Action-Test.yml
@@ -29,12 +29,14 @@ jobs:
         id: GetIssueFileContent
         uses: PSModule/GitHub-Script@v1
         with:
+          ShowOutput: true
           Script: . '.\tests\Get-IssueFileContent.ps1'
 
       - name: Action-Test
         id: Action-Test
         uses: ./
         with:
+          ShowOutput: true
           IssueBody: ${{ fromJson(steps.GetIssueFileContent.outputs.result).issueFileContent }}
 
       - name: Action-Test-Results
