--- a/action.yml
+++ b/action.yml
@@ -28,4 +28,5 @@ runs:
         Debug: true
         Verbose: true
         ShowOutput: true
+        Prerelease: true
         Script: . (Join-Path -Path '${{ github.action_path }}' -ChildPath 'scripts\main.ps1')
