🩹 [Patch]: Enable prerelease option in action.yml for enhanced functionality

--- a/action.yml
+++ b/action.yml
@@ -26,4 +26,5 @@ runs:
         GITHUB_ACTION_INPUT_IssueBody: ${{ inputs.IssueBody }}
       with:
         ShowOutput: true
+        Prerelease: true
         Script: . (Join-Path -Path '${{ github.action_path }}' -ChildPath 'scripts\main.ps1')
