🩹 [Patch]: Enable prerelease option in Action-Test.yml for enhanced functionality

--- a/.github/workflows/Action-Test.yml
+++ b/.github/workflows/Action-Test.yml
@@ -30,6 +30,7 @@ jobs:
         uses: PSModule/GitHub-Script@v1
         with:
           ShowOutput: true
+          Prerelease: true
           Script: . '.\tests\Get-IssueFileContent.ps1'
 
       - name: Action-Test
