🩹 [Patch]: Add configuration for linters and update file handling in workflows

--- a/.github/workflows/Action-Test.yml
+++ b/.github/workflows/Action-Test.yml
@@ -39,8 +39,6 @@ jobs:
           IssueBody: ${{ fromJson(steps.GetIssueFileContent.outputs.result).issueFileContent }}
 
       - name: Action-Test-Results
-        shell: pwsh
+        uses: PSModule/Invoke-Pester@v1
         env:
           data: ${{ steps.Action-Test.outputs.data }}
-        run: |
-          Invoke-Pester -Path tests
