--- a/action.yml
+++ b/action.yml
@@ -7,7 +7,7 @@ branding:
 
 inputs:
   IssueBody:
-    description: The body of the issue
+    description: The body of the issue, if not provided it will use the body of the issue that triggered the workflow.
     required: false
     default: ${{ github.event.issue.body }}
 
@@ -26,4 +26,6 @@ runs:
         GITHUB_ACTION_INPUT_IssueBody: ${{ inputs.IssueBody }}
       with:
         ShowOutput: true
-        Script: . (Join-Path -Path '${{ github.action_path }}' -ChildPath 'scripts\main.ps1')
+        Script: |
+          # Get-IssueFormData
+          ${{ github.action_path }}\scripts\main.ps1')
