--- a/action.yml
+++ b/action.yml
@@ -28,4 +28,4 @@ runs:
         ShowOutput: true
         Script: |
           # Get-IssueFormData
-          ${{ github.action_path }}\scripts\main.ps1
+          ${{ github.action_path }}/scripts/main.ps1
