🩹[Patch]: Workflow improvements (#18)
This release primarily updates and improves the workflows, focusing on
enhanced security, reliability, and maintainability. Key changes include
pinning all GitHub Action dependencies to specific commit SHAs, updating
and renaming the release workflow, removing unused linter configuration,
and refining scheduling and validation settings.

**Workflow and Dependency Management Improvements:**

* All GitHub Actions in workflow files (`Action-Test.yml`, `Linter.yml`,
`Release.yml`) are now pinned to specific commit SHAs for improved
security and reproducibility.
* The release workflow was renamed from
`.github/workflows/Auto-Release.yml` to `.github/workflows/Release.yml`,
with corresponding job and step name updates, and now uses the
`PSModule/Release-GHRepository` action instead of
`PSModule/Auto-Release`.
* The release workflow now triggers on `pull_request` events (instead of
`pull_request_target`), and is further scoped to only run when files in
`action.yml` or `src/**` are changed.

**Linter and Validation Configuration:**

* The unused `.github/linters/.jscpd.json` configuration file was
removed, and JSCPD validation is now explicitly disabled in the linter
workflow.
* Additional linter validations (such as `VALIDATE_BIOME_FORMAT`) are
now disabled to streamline linting.

**Scheduling and Workflow Behavior:**

* Dependabot update checks are now scheduled to run daily (instead of
weekly), with a 7-day cooldown between updates.

**Other Improvements:**

* Minor improvements to the `action.yml` metadata, including a clearer
description and updating the script path for the main PowerShell script.

--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: Get-IssueFormData
-description: Get the data from a issue that was generated based on a issue form
+description: Get the data from an issue that was generated based on an issue form
 author: PSModule
 branding:
   icon: upload-cloud
@@ -21,7 +21,7 @@ runs:
   steps:
     - name: Get-IssueFormData
       id: Get-IssueFormData
-      uses: PSModule/GitHub-Script@v1
+      uses: PSModule/GitHub-Script@0097f3bbe3f413f3b577b9bcc600727b0ca3201a # v1.7.10
       env:
         GITHUB_ACTION_INPUT_IssueBody: ${{ inputs.IssueBody }}
       with:
@@ -29,4 +29,4 @@ runs:
         ShowOutput: true
         Script: |
           # Get-IssueFormData
-          ${{ github.action_path }}/scripts/main.ps1
+          ${{ github.action_path }}/src/main.ps1
